--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>Hello my name is Cody. I am a Flatiron Student who is obsessed with Programming. This is my story.</p>
+<p>Hello my name is Cody. I am a Flatiron Grad who is obsessed with problem solving and programing. This is my story.</p>
